compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_function_param.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_function_param.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/types/duplicate_function_param.ml:1:16]
 1 │ fn add(x: i64, x: i64) {
   ·                ┬
   ·                ╰── duplicate parameter name
 2 │   x + x
   ╰────
  help: choose a unique name for each parameter
